removed border on title and artist

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="
                         row-span-1 
                         flex justify-between items-center 
-                        w-full max-w-xs mb-2 border-2">
+                        w-full max-w-xs mb-2">
 
                     <div class="
                         mr-8 
