disable progress bar with no song, separated next and previous button functionality

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <!-- Song Cover-->
                         <img
                             id="player-record"
-                            src="/assets/albums/cypress.jpg"
+                            src="/assets/compact-disc-solid.png"
                             alt="Song Cover Disk"
                             class="rounded-full shadow-lg border border-gray-400" />
                 </div>
@@ -86,7 +86,7 @@
                 <input
                     type="range"
                     id="player-progress-bar"
-                    class="row-span-1 w-4/5 max-w-xs hover:cursor-pointer"
+                    class="row-span-1 w-4/5 max-w-xs hover:cursor-pointer player-progress-bar"
                     value="0"
                     min="0"
                     max="180" />
@@ -120,7 +120,7 @@
                             <i class="h-max w-9 hover:fill-green-400 hover:text-green-400" data-feather="pause"></i>
                         </button>
                         <!-- next button -->
-                        <button onclick="playNext()" class="player-next-button change-song">
+                        <button class="player-next-button change-song">
                             <i class="h-max w-9 hover:fill-green-400 hover:text-green-400" data-feather="skip-forward"></i>
                         </button>
                     </div>
