fix navigation bar

--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
                             <button
                                 id="library-button"
                                 class="
-                                    flex gap-2 text-white bg-gray-800 
-                                    border-4 border-gray-800 rounded-md
-                                    hover:bg-green-300 hover:text-gray-800 
-                                    py-1 px-2 "
+                                flex gap-2 text-black bg-white 
+                                border-4 border-gray-800 rounded-md
+                                hover:bg-green-300 hover:text-gray-800 
+                                py-1 px-2 "
                                 onclick="changeContent('library', null)">
 
                                 <i class="h-full w-7" data-feather="book-open"></i>
