Fix hover colour in artist discography

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                             Settings
                         </h2>
                         <i data-feather="info" color="red"></i>
-                        <span class=" text-red-500 pl-1">Non Function Section</span>
+                        <span class=" text-red-500 pl-1">Non-functioning Section</span>
                     </div>
                 </div>
             </div>
