--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                 <p class="inline text-base">Sort:</p>
                                 <select
                                     name="sort"
-                                    class="bg-transparent text-base"
+                                    class="bg-transparent text-base hover:cursor-not-allowed"
                                     id="library-likedSongs-sort"
                                     disabled>
                                     <option value="alphabetical">
