changed the placeholder for adding friends

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                         <h2 id="friends-bar-title" class="text-4xl text-gray-500 font-bold">Friends</h2>
                         
                         <div class="flex items-center">
-                            <input type="text" id="friend-search" placeholder="Search" class="rounded-l-md p-2 w-4/5 shadow-sm">
+                            <input type="text" id="friend-search" placeholder="Add Friend" class="rounded-l-md p-2 w-4/5 shadow-sm">
                             <button class="bg-gray-700 hover:bg-gray-600 text-white rounded-r-md p-2 ml-1" onclick="addFriend()">
                                 <i data-feather="plus-circle"></i>
                             </button>
