Fixed missing assets and buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://unpkg.com/feather-icons"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="//cdn.jsdelivr.net/velocity/1.5/velocity.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/velocity/1.5/velocity.min.js"></script>
         <script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
         
         <!-- Scripts -->
@@ -78,7 +78,7 @@
                         <!-- Song Cover-->
                         <img
                             id="player-record"
-                            src="/assets/compact-disc-solid.png"
+                            src="./assets/compact-disc-solid.png"
                             alt="Song Cover Disk"
                             class="rounded-full shadow-lg border border-gray-400" />
                 </div>
