Add notification error for friends page

--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
 
             <!-- Q U E U E -->
             <div id="queue-container"
-                class="row-span-1 col-span-2 bg-gray-100 border-black rounded-md">
+                class="row-span-1 col-span-2 bg-gray-100 border-black rounded-md overflow-y-scroll">
                 <!-- 2. queue -->
             
                 <!-- Home Page Queue -->
-                <div id="small-queue" class="active ml-4 mt-2 ">
+                <div id="small-queue" class="active ml-4 mt-2">
 
                     <div class="flex flex-row items-center mb-4">
                         <h2 class="text-2xl font-bold mr-4">
@@ -191,9 +191,9 @@
                     </div>
                 
                     <!--Queued Songs-->
-                    <div class="flex flex-row ">
+                    <div class="flex flex-row">
                         <div
-                            id="queued-songs-container "
+                            id="queued-songs-container"
                             class="w-full ml-4 mr-4">
                             <!-- Queued Songs Container -->
                             <div class="border-b-2 mb-4">
